[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy==1.23.5",
    "pandas>=1.5.0",
    "plotly>=5.15.0",
    "scikit-learn>=1.3.0",
    "shap>=0.42.0",
    "streamlit>=1.40.1",
    "xgboost",
    "kaleido==0.2.1",
]
